--- a/.github/workflows/scrap_ACB_results.yml
+++ b/.github/workflows/scrap_ACB_results.yml
@@ -11,26 +11,26 @@ jobs:
     steps:
     - uses: 'actions/checkout@v3'
     
-    # - name: Instalar R
-    #   uses: r-lib/actions/setup-r@v2
+    - name: Instalar R
+      uses: r-lib/actions/setup-r@v2
 
-    # # Set-up R
-    # - name: Install packages
-    #   run: |
-    #     R -e "install.packages(c('tidyverse', 'Rcrawler', 'plyr'))"
-    # # Run R script
-    # - name: Scrape
-    #   run: Rscript data_acb_season.R
+    # Set-up R
+    - name: Install packages
+      run: |
+        R -e "install.packages(c('tidyverse', 'Rcrawler', 'plyr'))"
+    # Run R script
+    - name: Scrape
+      run: Rscript data_acb_season.R
 
-    # Run GitHub commands
-    # - id: 'GitHub_commands'
-    #   name: 'GitHub commands'
-    #   run: |-
-    #     git config --local user.name "$GITHUB_ACTOR"
-    #     git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-    #     git add data/results_match_id.csv
-    #     git commit -m "Scrap ACB results"
-    #     git push origin
+    Run GitHub commands
+    - id: 'GitHub_commands'
+      name: 'GitHub commands'
+      run: |-
+        git config --local user.name "$GITHUB_ACTOR"
+        git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git add data/results_match_id.csv
+        git commit -m "Scrap ACB results"
+        git push origin
 
     - id: 'auth_GCP'
       name: 'Authenticate to Google Cloud'
@@ -46,6 +46,6 @@ jobs:
       run: |
         bq load --source_format=CSV --autodetect --replace "${{ secrets.MY_PROJECT }}:${{ secrets.SOURCE_DATASET }}.results_season_match_id" "data/results_season_match_id.csv"
 
-    - name: Run Google workflow
-      run: |
-        gcloud workflows run ${{ secrets.WORKFLOW }} --project=${{ secrets.MY_PROJECT }} --location=${{ secrets.LOCATION }}
+    # - name: Run Google workflow
+    #   run: |
+    #     gcloud workflows run ${{ secrets.WORKFLOW }} --project=${{ secrets.MY_PROJECT }} --location=${{ secrets.LOCATION }}
