scrap_ACB_results fixed

--- a/.github/workflows/scrap_ACB_results.yml
+++ b/.github/workflows/scrap_ACB_results.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Scrape
       run: Rscript data_acb_season.R
 
-    Run GitHub commands
+    # Run GitHub commands
     - id: 'GitHub_commands'
       name: 'GitHub commands'
       run: |-
